@@ -76,18 +76,13 @@ public class TestLogicalPlanner {
     schema3.addColumn("score", Type.INT4);
 
     TableMeta meta = CatalogUtil.newTableMeta(schema, StoreType.CSV);
-    TableDesc people = new TableDescImpl("employee", meta,
-        new Path("file:///"));
+    TableDesc people = new TableDescImpl("employee", meta, new Path("/"));
     catalog.addTable(people);
 
-    TableDesc student = new TableDescImpl("dept", schema2, StoreType.CSV,
-        new Options(),
-        new Path("file:///"));
+    TableDesc student = new TableDescImpl("dept", schema2, StoreType.CSV, new Options(), new Path("/"));
     catalog.addTable(student);
 
-    TableDesc score = new TableDescImpl("score", schema3, StoreType.CSV,
-        new Options(),
-        new Path("file:///"));
+    TableDesc score = new TableDescImpl("score", schema3, StoreType.CSV, new Options(), new Path("/"));
     catalog.addTable(score);
 
     FunctionDesc funcDesc = new FunctionDesc("sumtest", SumInt.class, FunctionType.AGGREGATION,
@@ -104,7 +99,7 @@ public class TestLogicalPlanner {
     tpch.loadOutSchema();
     for (String table : tpchTables) {
       TableMeta m = CatalogUtil.newTableMeta(tpch.getSchema(table), StoreType.CSV);
-      TableDesc d = CatalogUtil.newTableDesc(table, m, new Path("file:///"));
+      TableDesc d = CatalogUtil.newTableDesc(table, m, new Path("/"));
       catalog.addTable(d);
     }
 
