@@ -27,7 +27,7 @@
 
   <property>
     <name>tajo.rootdir</name>
-    <value>file:///tmp/tajo-${user.name}</value>
+    <value>/tajo</value>
     <description>A base for other temporary directories.</description>
   </property>
 
@@ -37,18 +37,7 @@
   </property>
 
   <property>
-    <name>tajo.task.localdir</name>
-    <value>/tmp/tajo-localdir</value>
-  </property>
-
-  <property>
     <name>tajo.resource.manager</name>
     <value>org.apache.tajo.master.rm.TajoWorkerResourceManager</value>
   </property>
-
-  <property>
-    <name>tajo.master.manager.addr</name>
-    <value>127.0.0.1:0</value>
-  </property>
-
 </configuration>
