@@ -52,6 +52,8 @@ Release 0.2.0 - unreleased
 
   IMPROVEMENTS
 
+    TAJO-253: Clean up tajo-default.xml in test resource. (hyunsik)
+
     TAJO-239: Improving web UI. (Keuntae Park via hyunsik)
 
     TAJO-232: Rename join operators and add other join operators to
